# ffmpeger

./: .gitignore  README.md  ffmpeger.sln
muxer/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AudioVideoMerger.cpp  AudioVideoMerger.h  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  __init__.py  avmerger.sln  avmerger.vcxproj  avmerger.vcxproj.filters  avmerger_core.vcxproj  avmerger_core.vcxproj.filters  cmake_install.cmake  muxer.cpp  muxer.h  muxer.vcxproj  muxer.vcxproj.filters  prepare_wheel.vcxproj  prepare_wheel.vcxproj.filters  pybind.cpp  setup.py  test.py
